[gd_scene load_steps=5 format=3 uid="uid://c0j01yb7sufjk"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_o6ale"]
[ext_resource type="PackedScene" uid="uid://owk4twgt6bkv" path="res://scenes/main_menu.tscn" id="2_pllbp"]
[ext_resource type="PackedScene" uid="uid://cgxg32ixv4mmv" path="res://scenes/game.tscn" id="2_v76h7"]
[ext_resource type="PackedScene" uid="uid://c2rvuwmm1u48x" path="res://scenes/game_over.tscn" id="4_xh08m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_o6ale")
game_scene = ExtResource("2_v76h7")

[node name="MainMenu" parent="." instance=ExtResource("2_pllbp")]

[node name="GameOver" parent="." instance=ExtResource("4_xh08m")]
visible = false

[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="restart_game" from="GameOver" to="." method="_on_game_over_restart_game"]
